# underpromoters-riddle-dsu26

./: .gitignore  01a_find_knight_promotions.py  01b_find_queen_promotions.py  02b_analyze_objective.py  03_convert_probabilities.py  04b_classify_objective.py  05a_knight_behavioral_classification.csv  README.md  analyze_behavioral.py  classify_promotions.py  find_knight_promotions.py  find_queen_promotions.py  flake.nix  knight_promotions.txt  pyproject.toml  queen_promotions.txt  submit.slurm  utils.py
