[build-system]
requires = ["setuptools"]

[project]
name = "chess-analysis"
version = "0.0.1"
requires-python = ">=3.12"
description = "TODO"
readme = "README.md"
dependencies = [
"chess~=1.11.2"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include=["*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
        'test-data/',
        'survey/migrations/'
]